[gd_scene load_steps=13 format=2]

[ext_resource path="res://Levels/GenericLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Symbols/slash.png" type="Texture" id=2]
[ext_resource path="res://Buttons/MovableButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Numbers/1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Operators/equal.png" type="Texture" id=5]
[ext_resource path="res://Assets/Numbers/2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Numbers/0.png" type="Texture" id=7]
[ext_resource path="res://Assets/Numbers/7.png" type="Texture" id=8]
[ext_resource path="res://Assets/Symbols/L.png" type="Texture" id=9]
[ext_resource path="res://Assets/Symbols/Box.png" type="Texture" id=10]
[ext_resource path="res://Assets/square_missing.png" type="Texture" id=11]
[ext_resource path="res://Levels/Level9/Level9.gd" type="Script" id=12]

[node name="Level9" instance=ExtResource( 1 )]
script = ExtResource( 12 )

[node name="TrueRect" parent="." index="0"]
margin_left = 174.0
margin_top = 196.0
margin_right = 190.0
margin_bottom = 212.0
rect_scale = Vector2( 25, 10 )

[node name="TextureRect" type="TextureRect" parent="." index="5"]
margin_left = 193.0
margin_top = 250.0
margin_right = 209.0
margin_bottom = 266.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="TextureRect2" type="TextureRect" parent="." index="6"]
margin_left = 221.159
margin_top = 248.58
margin_right = 237.159
margin_bottom = 264.58
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="TextureRect3" type="TextureRect" parent="." index="7"]
margin_left = 267.727
margin_top = 250.682
margin_right = 283.727
margin_bottom = 266.682
rect_scale = Vector2( 2, 3 )
texture = ExtResource( 10 )

[node name="TextureRect10" type="TextureRect" parent="." index="8"]
margin_left = 301.439
margin_top = 250.467
margin_right = 317.439
margin_bottom = 266.467
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="." index="9"]
margin_left = 356.679
margin_top = 251.333
margin_right = 372.679
margin_bottom = 267.333
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="TextureRect9" type="TextureRect" parent="." index="10"]
margin_left = 345.333
margin_top = 249.998
margin_right = 361.333
margin_bottom = 265.998
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 9 )

[node name="TextureRect8" type="TextureRect" parent="." index="11"]
margin_left = 474.273
margin_top = 255.102
margin_right = 490.273
margin_bottom = 271.102
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 8 )

[node name="TextureRect6" type="TextureRect" parent="." index="12"]
margin_left = 394.0
margin_top = 252.0
margin_right = 410.0
margin_bottom = 268.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="TextureRect7" type="TextureRect" parent="." index="13"]
margin_left = 433.0
margin_top = 252.0
margin_right = 449.0
margin_bottom = 268.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="MovableButton" parent="." index="14" instance=ExtResource( 3 )]
margin_left = 259.903
margin_top = 248.92
margin_right = 275.903
margin_bottom = 264.92
texture_normal = ExtResource( 2 )
text = ExtResource( 2 )

[node name="MovableButton2" parent="." index="15" instance=ExtResource( 3 )]
margin_left = 387.423
margin_top = 234.634
margin_right = 403.423
margin_bottom = 250.634
rect_rotation = 89.9999
rect_scale = Vector2( 3, 2.4 )
text = ExtResource( 4 )
